--- a/client/src/components/trade-inventory/trade-inventory.component.scss
+++ b/client/src/components/trade-inventory/trade-inventory.component.scss
@@ -5,6 +5,11 @@
   &.steam {
     height: 85%;
   }
+
+  &.bot {
+    grid-column-start: 1;
+    grid-row-start: 1;
+  }
 }
 
 .inventory-container {
