finish to inventory and price calculation functionality

--- a/client/src/components/inventory-slot/inventory-slot.component.scss
+++ b/client/src/components/inventory-slot/inventory-slot.component.scss
@@ -17,11 +17,14 @@
 
   .item-rarity {
     margin: 5px 0;
+    overflow-x: hidden;
   }
 
   .item-img {
     width: 100%;
   }
 
-
+  &:hover {
+    cursor: pointer;
+  }
 }
