--- a/client/src/components/inventory-slot/inventory-slot.component.scss
+++ b/client/src/components/inventory-slot/inventory-slot.component.scss
@@ -10,6 +10,7 @@
   font-family: $header-font;
   font-size: 0.8rem;
   font-weight: 700;
+  user-select: none;
 
   .item-price {
     margin: 5px 0;
