--- a/client/src/components/black-screen/black-screen.component.scss
+++ b/client/src/components/black-screen/black-screen.component.scss
@@ -1,10 +1,15 @@
-.black-screen {
+.black-screen-container {
   position: absolute;
   top: 0;
   left: 0;
-  background-color: #000;
-  opacity: 0.8;
   width: 100vw;
   height: 100vh;
   z-index: 1;
+
+  .black-screen {
+    width: 100%;
+    height: 100%;
+    background-color: #000;
+    opacity: 0.8;
+  }
 }
