--- a/client/src/components/button/button.component.scss
+++ b/client/src/components/button/button.component.scss
@@ -56,4 +56,16 @@
       background-color: $primary-bright-pink;
     }
   }
+
+  &.server-btn {
+    width: 50%;
+    font-size: 1.2rem;
+    padding: 10px 10%;
+    background-color: $primary-gray-pink;
+    color: white;
+
+    &:hover {
+      background-color: $primary-bright-pink;
+    }
+  }
 }
