--- a/client/src/components/trade-inventory/trade-inventory.component.scss
+++ b/client/src/components/trade-inventory/trade-inventory.component.scss
@@ -18,4 +18,10 @@
   flex-wrap: wrap;
   padding: 1.5%;
   padding-right: 0;
+
+  svg {
+    margin: 4% auto;
+    color: white;
+    opacity: 0.5;
+  }
 }
