--- a/client/src/components/body-container/body-container.component.scss
+++ b/client/src/components/body-container/body-container.component.scss
@@ -14,20 +14,5 @@
   background-color: $neutral-dark-pink;
   overflow: auto;
 
-  //Scrollbar customization
-  /* width */
-  &::-webkit-scrollbar {
-    width: 10px;
-  }
-
-  /* Track */
-  &::-webkit-scrollbar-track {
-    background-color: $primary-gray-pink;
-  }
-
-  /* Handle */
-  &::-webkit-scrollbar-thumb {
-    background: $primary-red-pink;
-    border-radius: 30px;
-  }
+  @include scrollBar
 }
