--- a/client/src/components/steam-inventory-toolbar/steam-inventory-toolbar.component.scss
+++ b/client/src/components/steam-inventory-toolbar/steam-inventory-toolbar.component.scss
@@ -30,6 +30,39 @@ $margin-value: 30px;
     }
   }
 
+  .filtered-hero {
+    width: 15%;
+    position: relative;
+
+    &:hover {
+      cursor: pointer;
+
+      img {
+        filter: brightness(50%);
+      }
+
+      svg {
+        opacity: 1;
+        visibility: visible;
+      }
+    }
+
+    img {
+      width: 100%;
+      transition: $transition-value;
+    }
+
+    svg {
+      position: absolute;
+      bottom: 50%;
+      left: 50%;
+      opacity: 0;
+      visibility: hidden;
+      transform: translate(-50%, 50%);
+      transition: $transition-value;
+    }
+  }
+
   .tool-section {
     display: flex;
     align-items: center;
