--- a/client/src/components/filter-box/filter-box.component.scss
+++ b/client/src/components/filter-box/filter-box.component.scss
@@ -1,10 +1,9 @@
 @import '../../assets/styles/_basics.scss';
 
 .filter-box {
-  display: inline-block;
-  background-color: white;
+  border: none;
   padding: 5%;
   border-radius: $border-radius-value;
-  width: 30%;
+  width: 80%;
   text-align: center;
 }
