--- a/client/src/components/trading-handle/trading-handle.component.scss
+++ b/client/src/components/trading-handle/trading-handle.component.scss
@@ -15,7 +15,7 @@
     border-radius: $border-radius-value;
     color: white;
     font-size: 1.2rem;
-    margin-bottom: 10px;
+    margin: 10px 0;
 
     .rate {
       position: relative;
@@ -26,7 +26,7 @@
 
   .handle-filter-container {
     background-color: $primary-gray-pink;
-    height: 70%;
+    height: 75%;
     border-radius: $border-radius-value;
     display: flex;
     flex-direction: column;
