--- a/client/src/components/filter/filter.component.scss
+++ b/client/src/components/filter/filter.component.scss
@@ -1,4 +1,5 @@
 @import '../../assets/styles/_colors.scss';
+@import '../../assets/styles/_basics.scss';
 
 .filter {
   display: flex;
@@ -29,6 +30,14 @@
       &.global {
         margin: 10px 0;
       }
+    }
+
+    .filter-box {
+      border: none;
+      padding: 5%;
+      border-radius: $border-radius-value;
+      width: 80%;
+      text-align: center;
     }
   }
 
