--- a/client/src/components/trading-area/trading-area.component.scss
+++ b/client/src/components/trading-area/trading-area.component.scss
@@ -6,4 +6,22 @@
   grid-template-rows: repeat(5, 1fr);
   gap: 10px;
   width: 40%;
+  position: relative;
+
+  .user-block {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: black;
+    opacity: 0.6;
+    z-index: 1;
+
+    h1 {
+      color: white;
+      text-align: center;
+      position: relative;
+      top: 50%;
+      transform: translateY(-100%);
+    }
+  }
 }
