--- a/client/src/components/user/user.component.scss
+++ b/client/src/components/user/user.component.scss
@@ -10,9 +10,13 @@
   display: flex;
   align-items: center;
 
+  .account-balance {
+    margin-right: 20px;
+    font-weight: 700;
+  }
+
   .avatar {
     width: 40px;
-    border-radius: 100%;
     margin-right: 20px;
     @include hover;
   }
