--- a/client/src/components/user-dropdown/user-dropdown.component.scss
+++ b/client/src/components/user-dropdown/user-dropdown.component.scss
@@ -10,17 +10,30 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  align-items: left;
   border: 2px solid $neutral-dark-blue;
-  font-size: 0.9rem;
+  animation: dropDownAnimation 0.2s ease-in-out forwards;
+  overflow: hidden;
+
+  @keyframes dropDownAnimation {
+    from {
+      opacity: 0;
+    }
+
+    to {
+      opacity: 1;
+    }
+  }
 
   .option {
     @include hoverState;
 
     padding: 10px 15px;
+    width: 100%;
+    box-sizing: border-box;
 
     span {
       position: relative;
+      float: right;
 
       &:after {
         content: '';
@@ -36,7 +49,6 @@
       background-color: $primary-red-pink;
 
       span {
-
         &:after {
           border: 1px solid black;
           width: 100%;
