update slot, hero portrait styles

--- a/client/src/components/hero-portrait/hero-portrait.component.scss
+++ b/client/src/components/hero-portrait/hero-portrait.component.scss
@@ -1,14 +1,18 @@
+@import '../../assets/styles/_basics.scss';
+
 .hero-portrait {
+  @include hoverState;
   width: 15%;
   margin: 2.09%;
   position: relative;
+  transition: $transition-value;
 
   img {
     width: 100%;
   }
 
   &:hover {
-    cursor: pointer;
-
+    filter: brightness(120%);
+    transform: scale(1.2);
   }
 }
