--- a/client/src/components/steam-inventory-toolbar/steam-inventory-toolbar.component.scss
+++ b/client/src/components/steam-inventory-toolbar/steam-inventory-toolbar.component.scss
@@ -54,11 +54,11 @@ $margin-value: 30px;
 
     svg {
       position: absolute;
-      bottom: 50%;
+      top: 50%;
       left: 50%;
       opacity: 0;
       visibility: hidden;
-      transform: translate(-50%, 50%);
+      transform: translate(-50%, -50%);
       transition: $transition-value;
     }
   }
