add account balance item and implement account balance functionality

--- a/client/src/components/inventory-slot/inventory-slot.component.scss
+++ b/client/src/components/inventory-slot/inventory-slot.component.scss
@@ -25,9 +25,13 @@
     overflow-x: hidden;
   }
 
-  &:hover {
-    filter: brightness(120%);
-    transform: scale(1.1);
+  &.activated {
 
+    &:hover {
+      filter: brightness(120%);
+      transform: scale(1.1);
+
+    }
   }
+
 }
