--- a/client/src/components/user/user.component.scss
+++ b/client/src/components/user/user.component.scss
@@ -19,6 +19,7 @@
     background-color: white;
     padding: 5px 10px;
     border-radius: $border-radius-value;
+    font-family: $header-font;
   }
 
   .avatar {
