--- a/client/src/components/inventory-slot/inventory-slot.component.scss
+++ b/client/src/components/inventory-slot/inventory-slot.component.scss
@@ -10,7 +10,7 @@
   text-align: center;
   color: white;
   font-family: $header-font;
-  font-size: 0.8rem;
+  font-size: 0.8vw;
   font-weight: 700;
   user-select: none;
   overflow: hidden;
