--- a/client/src/components/button/button.component.scss
+++ b/client/src/components/button/button.component.scss
@@ -3,7 +3,7 @@
 
 .btn {
   border: none;
-  width: 100%;
+  width: 90%;
   border-radius: $border-radius-value;
   transition: $transition-value;
 
@@ -15,20 +15,17 @@
     padding: 5% 0;
     background-color: $primary-red-pink;
     color: white;
+    margin: 10px 0;
 
     &:hover {
       background-color: $primary-bright-pink;
-    }
-
-    &.btn-filter-user,
-    &.btn-filter-bot {
-      margin-top: 10px;
     }
   }
 
   &.btn-trade {
     background-color: $neutral-dark-blue;
     height: 10%;
+    width: 100%;
     color: white;
     font-weight: 700;
     font-size: 2rem;
@@ -57,6 +54,34 @@
 
     &:hover {
       background-color: $primary-bright-pink;
+    }
+  }
+
+  &.btn-currency {
+    padding: 10px 10%;
+    width: 90%;
+    margin: 20px auto;
+    background-color: $primary-red-pink;
+    color: white;
+
+    &:hover {
+      background-color: $primary-bright-pink;
+    }
+  }
+
+  &.btn-filter-state {
+    padding: 10px 10%;
+    width: 90%;
+    margin: 0 auto;
+    background-color: $primary-red-pink;
+    color: white;
+
+    &:hover {
+      background-color: $primary-bright-pink;
+    }
+
+    &.global {
+      margin-top: 50px;
     }
   }
 }
