--- a/client/src/components/trading-counter/trading-counter.component.scss
+++ b/client/src/components/trading-counter/trading-counter.component.scss
@@ -11,6 +11,7 @@
   align-items: center;
   justify-content: space-between;
   height: 100%;
+  position: relative;
 
   .total-money {
     background-color: $primary-red-pink;
