--- a/client/src/components/steam-inventory-toolbar/steam-inventory-toolbar.component.scss
+++ b/client/src/components/steam-inventory-toolbar/steam-inventory-toolbar.component.scss
@@ -11,62 +11,35 @@ $margin-value: 30px;
   display: flex;
   align-items: center;
   justify-content: space-between;
+  box-sizing: border-box;
+  padding: 0 $margin-value;
 
   .searchbar {
     display: flex;
     align-items: center;
-    width: 40%;
-    margin-left: $margin-value;
+    width: 30%;
     padding: 8px;
     background-color: white;
     border-radius: $border-radius-value;
+    transition: $transition-value;
+    position: absolute;
+
+    &.active {
+      width: 80%;
+      z-index: 1;
+    }
 
     input {
       border: none;
       background-color: unset;
       width: 100%;
-      margin: 0 15px 0 5px;
-      padding: 5px 20px 5px 0;
-    }
-  }
-
-  .filtered-hero {
-    width: 15%;
-    position: relative;
-
-    &:hover {
-      cursor: pointer;
-
-      img {
-        filter: brightness(50%);
-      }
-
-      svg {
-        opacity: 1;
-        visibility: visible;
-      }
-    }
-
-    img {
-      width: 100%;
-      transition: $transition-value;
-    }
-
-    svg {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      opacity: 0;
-      visibility: hidden;
-      transform: translate(-50%, -50%);
-      transition: $transition-value;
+      padding-left: 5px;
     }
   }
 
   .tool-section {
     display: flex;
     align-items: center;
-    margin-right: $margin-value;
     color: white;
 
     div:hover {
