--- a/client/src/components/user/user.component.scss
+++ b/client/src/components/user/user.component.scss
@@ -20,6 +20,7 @@
     padding: 5px 10px;
     border-radius: $border-radius-value;
     font-family: $header-font;
+    font-size: 0.9rem;
   }
 
   .avatar {
