--- a/client/src/components/trading-counter/trading-counter.component.scss
+++ b/client/src/components/trading-counter/trading-counter.component.scss
@@ -24,6 +24,8 @@
       color: white;
       font-family: $header-font;
       font-weight: 700;
+      font-size: 0.9rem;
+      text-align: center;
     }
   }
 
