--- a/client/src/components/steam-inventory-toolbar/steam-inventory-toolbar.component.scss
+++ b/client/src/components/steam-inventory-toolbar/steam-inventory-toolbar.component.scss
@@ -18,7 +18,7 @@ $margin-value: 30px;
     display: flex;
     align-items: center;
     width: 30%;
-    padding: 8px;
+    padding: 1%;
     background-color: white;
     border-radius: $border-radius-value;
     transition: $transition-value;
