--- a/client/src/pages/trade-page/trade-page.component.scss
+++ b/client/src/pages/trade-page/trade-page.component.scss
@@ -1,7 +1,7 @@
 @import '../../assets/styles/_colors.scss';
 @import '../../assets/styles/_basics.scss';
 
-.body-container {
+.trade-container {
   margin: 20px $margin-horizontal-value;
   display: flex;
   justify-content: space-between;
