--- a/client/src/assets/styles/_basics.scss
+++ b/client/src/assets/styles/_basics.scss
@@ -3,6 +3,7 @@
 $margin-horizontal-value: 3%;
 $border-radius-value: 20px;
 $transition-value: all 0.1s ease-in-out;
+$box-shadow-value: 5px 5px 10px 0px rgba(0, 0, 0, 0.25);
 
 @mixin scrollBar {
 
