--- a/client/src/components/dropdown-bar/dropdown-bar.component.scss
+++ b/client/src/components/dropdown-bar/dropdown-bar.component.scss
@@ -6,7 +6,7 @@
   @include hoverState;
   width: 100%;
   box-sizing: border-box;
-  box-shadow: 5px 5px 10px 0px rgba(0, 0, 0, 0.25);
+  box-shadow: $box-shadow-value;
   padding: 15px;
   margin-bottom: 20px;
   font-family: $header-font;
@@ -28,7 +28,7 @@
   @include scrollBar;
   width: 100%;
   box-sizing: border-box;
-  box-shadow: 5px 5px 10px 0px rgba(0, 0, 0, 0.25);
+  box-shadow: $box-shadow-value;
   padding: 0px;
   padding-top: 0px;
   margin-bottom: 20px;
