basic confirmation box

--- a/admin/src/components/user-item/user-item.component.scss
+++ b/admin/src/components/user-item/user-item.component.scss
@@ -41,4 +41,16 @@
       color: $bright-blue;
     }
   }
+
+  .user-actions {
+    .hover {
+      padding: 5px;
+      border-radius: 100%;
+      transition: $transition-value;
+
+      &:hover {
+        background-color: $white-blue;
+      }
+    }
+  }
 }
