--- a/admin/src/components/confirmation-box/confirmation-box.component.scss
+++ b/admin/src/components/confirmation-box/confirmation-box.component.scss
@@ -12,6 +12,7 @@
   transform: translate(-50%, -50%);
   border-radius: 25px;
   overflow: hidden;
+  padding: 15px 0 50px;
 
   h4 {
     margin: 35px 0;
