finish users page

--- a/admin/src/pages/users-page/users-page.component.scss
+++ b/admin/src/pages/users-page/users-page.component.scss
@@ -6,6 +6,7 @@
     display: flex;
     justify-content: flex-end;
     align-items: center;
+    position: relative;
 
     .tool {
       margin: 0 5px;
