update users page

--- a/admin/src/App.scss
+++ b/admin/src/App.scss
@@ -13,8 +13,8 @@
     margin-right: $horizontal-margin-value;
 
     .page-content {
-      overflow: auto;
-      height: 100%;
+      // overflow: auto;
+      // height: 100%;
     }
   }
 }
