--- a/admin/src/components/user-item/user-item.component.scss
+++ b/admin/src/components/user-item/user-item.component.scss
@@ -6,10 +6,11 @@
   grid-template-columns: 1fr 1fr 3fr 2fr 3fr 3fr;
   width: 100%;
   gap: 10px;
-  padding: 10px;
+  padding: 5px;
   box-sizing: border-box;
   align-items: center;
   transition: $transition-value;
+  font-size: 0.9rem;
 
   &.head {
     font-size: 0.8rem;
@@ -29,7 +30,7 @@
     text-align: center;
 
     img {
-      max-width: 35px;
+      max-width: 30px;
       border-radius: 100%;
     }
   }
