--- a/admin/src/pages/user/users-page/users-page.component.scss
+++ b/admin/src/pages/user/users-page/users-page.component.scss
@@ -1,5 +1,5 @@
-@import '../../assets/styles/basics';
-@import '../../assets/styles/colors';
+@import '../../../assets/styles/basics';
+@import '../../../assets/styles/colors';
 
 .users-page {
   height: 100%;
