--- a/admin/src/App.scss
+++ b/admin/src/App.scss
@@ -33,3 +33,16 @@
 i {
   line-height: 1;
 }
+
+input {
+  border: none;
+  border-bottom: 2px solid rgba($color: $bright-blue, $alpha: 0.35);
+  border-radius: $border-radius-value;
+  padding: 5px 10px;
+  box-shadow: $shadow-value;
+
+  &:focus {
+    outline: none;
+    border-bottom: 2px solid rgba($color: $bright-blue, $alpha: 1);
+  }
+}
