--- a/admin/src/pages/item/items-page/items-page.component.scss
+++ b/admin/src/pages/item/items-page/items-page.component.scss
@@ -1,5 +1,5 @@
-@import '../../assets/styles/basics';
-@import '../../assets/styles/colors';
+@import '../../../assets/styles/basics';
+@import '../../../assets/styles/colors';
 
 .items-page {
   .toolbar-container {
