--- a/admin/src/index.scss
+++ b/admin/src/index.scss
@@ -6,6 +6,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   box-sizing: border-box;
+  background-color: rgba($color: gray, $alpha: 0.1)
 }
 
 code {
